--- a/haskell/witness_seed_3.0/witness_seed_3.0.cabal
+++ b/haskell/witness_seed_3.0/witness_seed_3.0.cabal
@@ -7,6 +7,7 @@ build-type: Simple
 executable witness-seed-3
   main-is: WitnessSeed3.hs
   other-modules:
+      Types
       RWD
       Kairos
       IO
@@ -16,12 +17,15 @@ executable witness-seed-3
       base >=4.7 && <5
     , random
     , mtl
+    , aeson
+    , bytestring
   default-language: Haskell2010
 
 test-suite witness-seed-3-test
   type: exitcode-stdio-1.0
   main-is: TestRWD.hs
   other-modules:
+      Types
       RWD
       Kairos
   hs-source-dirs:
@@ -31,4 +35,6 @@ test-suite witness-seed-3-test
       base >=4.7 && <5
     , random
     , mtl
+    , aeson
+    , bytestring
   default-language: Haskell2010
